@startuml

' =============================================
' MongoDB Collections — Document Model (Story Builder)
' =============================================

entity "stories" as STORIES {
  * _id: ObjectId <<PK>>
  --
  * title: string
  * canon_pins: string[]
  genre: string
  theme: string
  main_prompt: string
  general_prompt: string
  bible_id: ObjectId
  * created_at: Date
  * updated_at: Date
}

entity "chapters" as CHAPTERS {
  * _id: ObjectId <<PK>>
  --
  * story_id: ObjectId <<FK>>
  * title: string
  goal: string
  * order_index: int
  summary: string
  status: string
  * created_at: Date
  * updated_at: Date
}

entity "scenes" as SCENES {
  * _id: ObjectId <<PK>>
  --
  * chapter_id: ObjectId <<FK>>
  * story_id: ObjectId <<FK>>
  title: string
  * beat_intent: string
  character_refs: ObjectId[]
  location_ref: ObjectId
  pov: string
  tone: string
  target_words: int
  scene_structure: object
  parent_scene_id: ObjectId
  timeline_position: string
  flow_type: string
  max_turns: int
  status: string
  * created_at: Date
  * updated_at: Date
}

entity "scene_edges" as EDGES {
  * _id: ObjectId <<PK>>
  --
  * story_id: ObjectId <<FK>>
  * from_scene: ObjectId <<FK>>
  * to_scene: ObjectId <<FK>>
  * edge_type: string
  condition: string
}

entity "generations" as GENS {
  * _id: ObjectId <<PK>>
  --
  * scene_id: ObjectId <<FK>>
  * context_hash: string
  * prompt_snapshot: string
  * output: string
  * model: string
  * accepted: bool
  validation_result: object
  * created_at: Date
}

entity "characters" as CHARS {
  * _id: ObjectId <<PK>>
  * version: int
  --
  * name: string
  persona: string
  backstory: string
  moral_alignment: string
  personality: object
  flaws: object
  goals: object
  traits: object
  voice_samples: string[]
  relationships: object
  parent_id: ObjectId
  * created_at: Date
}

entity "locations" as LOCS {
  * _id: ObjectId <<PK>>
  * version: int
  --
  * name: string
  description: string
  props: object
  * created_at: Date
}

entity "lore" as LORE {
  * _id: ObjectId <<PK>>
  --
  tags: string[]
  * content: string
  embedding: number[]
  * created_at: Date
}

entity "character_state" as CHARSTATE {
  * _id: ObjectId <<PK>>
  --
  * story_id: ObjectId <<FK>>
  * character_id: ObjectId
  * as_of_scene: ObjectId <<FK>>
  * state: object
  * updated_at: Date
  indexes: {story_id+character_id, as_of_scene}
}

entity "character_memories" as MEMS {
  * _id: ObjectId <<PK>>
  --
  * character_id: ObjectId <<FK>>
  * scene_id: ObjectId <<FK>>
  * content: string
  embedding: number[]
  importance: float
  * created_at: Date
}

entity "scene_turns" as TURNS {
  * _id: ObjectId <<PK>>
  --
  * scene_id: ObjectId <<FK>>
  * turn_number: int
  * agent_name: string
  prompt: string
  output: string
  model: string
  status: string
  * created_at: Date
}

entity "agent_runs" as RUNS {
  * _id: ObjectId <<PK>>
  --
  * scene_id: ObjectId <<FK>>
  * story_id: ObjectId <<FK>>
  * status: string
  turns: object[]
  * created_at: Date
}

entity "summaries" as SUMS {
  * _id: ObjectId <<PK>>
  --
  * story_id: ObjectId <<FK>>
  scene_id: ObjectId <<FK>>
  * level: string
  * content: string
  word_count: int
  * created_at: Date
}

entity "timeline_events" as TLEVTS {
  * _id: ObjectId <<PK>>
  --
  * story_id: ObjectId <<FK>>
  * scene_id: ObjectId <<FK>>
  * event_type: string
  * description: string
  * sequence: int
  * created_at: Date
}

entity "bible" as BIBLE {
  * _id: ObjectId <<PK>>
  --
  * story_id: ObjectId <<FK>>
  * content: string
  rules: object[]
  * version: int
  * created_at: Date
}

entity "jobs" as JOBS {
  * _id: ObjectId <<PK>>
  --
  * type: string
  * payload: object
  status: string
  lease_until: Date
  retry_count: int
  * created_at: Date
  indexes: {status+lease_until}
}

' --- Relationships ---

stories ||--o{ chapters : "story_id"
stories ||--o{ scenes : "story_id"
stories ||--o{ scene_edges : "story_id"
stories ||--o{ character_state : "story_id"
stories ||--o{ summaries : "story_id"
stories ||--o{ timeline_events : "story_id"
stories ||--o{ bible : "story_id"

chapters ||--o{ scenes : "chapter_id"

scenes ||--o{ scene_edges : "from_scene"
scenes ||--o{ scene_edges : "to_scene"
scenes ||--o{ generations : "scene_id"
scenes ||--o{ scene_turns : "scene_id"
scenes ||--o{ character_state : "as_of_scene"
scenes ||--o{ summaries : "scene_id"
scenes ||--o{ timeline_events : "scene_id"
scenes ||--o{ character_memories : "scene_id"
scenes ?--? scenes : "parent_scene_id"

characters ||--o{ character_state : "character_id"
characters ||--o{ character_memories : "character_id"

@enduml
